kc_ingress.yaml
---
#
# KC Ingress
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kc-ingress
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: keycloak.sys.lean-sys.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
  tls:
    - secretName: keycloak-tls
      hosts:
        - keycloak.sys.lean-sys.com
